--- a/Home.html
+++ b/Home.html
@@ -18,6 +18,11 @@
                     <p>Health care </p>
                 </div>
     </header>
+    <main>
+        <footer>
+            <div class="box-3">MEDICAL CLINIC</div>
+        </footer>
+    </main>
 </body>
 
 </html>
