--- a/Home.html
+++ b/Home.html
@@ -21,8 +21,22 @@
     <main>
         <footer>
             <div class="box-3">MEDICAL CLINIC</div>
+            <div class="box-4">LET US TAKE CARE OF YOU</div>
         </footer>
     </main>
+    <div>
+        <div><img src="./Double-Quote.png" width="3%"> </div>
+        <div>ABOUT <span style="font-size: 400%; text-align: center; color: rgb(12, 23, 144);">US</span></div>
+        <div>
+        </div>
+        <div style="color: blue;">Here's how to support those impacted by the earthquake in south-eastern Turkey. An
+            earthquake has killed thousands in Syria and Turkey. Here's a list of aid organizations. Take Action Now.
+            Become a Global Citizen. <img src="./Doctor.jpg" style="height:10%; width: 10%;"></div>
+        <hr>
+        <div>
+            <p>OUR SERVICES </p>
+        </div>
+    </div>
 </body>
 
 </html>
