--- a/Home.html
+++ b/Home.html
@@ -33,9 +33,14 @@
             earthquake has killed thousands in Syria and Turkey. Here's a list of aid organizations. Take Action Now.
             Become a Global Citizen. <img src="./Doctor.jpg" style="height:10%; width: 10%;"></div>
         <hr>
-        <div>
+        <div class="box-5">
+            <div> Special Attention For COVID </div>
             <p>OUR SERVICES </p>
         </div>
+        <div><img src="./7831561.png">Home health care service Shop no 4 darshit complex,nandi park main road, r,
+            akashwani chowk Open 24 hours </div>
+        <div><img src="./558304.png">Digital Check is the leading developer of cutting-edge check imaging technology
+            that delivers the utmost in quality assurance and provides users with ...</div>
     </div>
 </body>
 
